Editor fixes
Added unsaved indicator, fixed name not showing and makes title change between editing and reading depending on mode. Fixed not showing as logged in when edting note

--- a/static/style.css
+++ b/static/style.css
@@ -216,6 +216,16 @@ form {
     line-height: 1.5;
 }
 
+/* Unsaved indicator */
+#unsavedIndicator {
+    font-weight: bold;
+    animation: blink 1s step-start 0s infinite;
+}
+
+@keyframes blink {
+    50% { opacity: 0; }
+}
+
 /* Tag List */
 .tag-list {
     display: flex;
